0.14
[~] minor cleanup and refactoring

0.13
[+] support for pipelining compression->encryption->checksumming (and other pipelines too)
[+] added a couple of SHA3 candidate hashes
[+] added gipfeli
[+] added siphash
[+] added blake2
[+] added LZ4bz - an incompatible mod of LZ4 proposed by Bulat Ziganshin
[+] added mmini (only LZ77 for now)
[+] added zopfli
[+] added new Sanmayce's hashes
[~] updated LZ4 to r85, now I use LZ4_compress_limitedOutput function
[~] removed LZ4 option to use more memory, it was too hard to maintain
[~] updated xxhash to r5
[~] updated lodepng to 20120729
[~] cleanup, minor fixes and refactoring
[~] eclipse integration
[~] initial doxygen integration
[~] fossil integration
[!] updated Tornado to the latest mercurial version to fix a clang issue
[!] numerous portability issues
[!] memory leak in zlib and miniz handlers
[!] insignificant memory leak in the main testing function
[!] md5 has 128 bits, not 160

0.12
[+] updated Shrinker to r6
[+] updated fnv1a-Tesla to v2
[+] updated xxhash256 to v1
[+] added ECrypt ciphers

0.11
[+] added xxhash
[+] added Sanmayce's hashes
[+] added SpookyHash
[+] added MurmurHash
[+] added CityHash
[+] added crypto++'s hashes
[+] added zfs' fletcher2 and fletcher4 hashes
[+] added CrapWow hash
[+] refactoring to enable in-place transforms (i.e. ciphers, hashes)
[~] always use aligned buffers
[~] removed bzip2 from the default installation (it doesn't have any real competition in FSBench ATM)
[~] removed shrinker from the default installation (doesn't work on my linux)
[~] added crypto++ to the default build
[~] use crc instead of memcmp to detect incorrect (de)compression
[~] reworked buffer management
[~] code cleanup

0.10
[+] added QuickLZ zip
[+] added Halibut's deflate
[+] colourful output
[~] updated zlib to 1.2.7
[~] updated LZ4 (and LZ4hc that was merged with it) to r66
[~] removed LZ4 modes that used LZ4_COMPRESSMIN of 4096, it didn't really work different from 1
[~] code cleanup